# python-motion

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yaml  test.yaml
data/: Motion REST API swagger.json
plugins/todo_manager/: cli.py  sync.py
src/motion/: __init__.py  client.py  models.py
src/motion/models/: __init__.py
src/motion/resources/: __init__.py  base.py  comment.py  project.py  schedule.py  task.py  user.py  workspace.py
tests/: conftest.py  test_comment_resource.py  test_fetch_parse.py  test_project_resource.py  test_projects_list.py  test_schedule_resource.py  test_user_resource.py
