[tool.poetry]
name = "python-motion"
version = "0.1.1"
description = ""
authors = ["Lemuel Boyce <lemuel@vokality.com>"]
readme = "README.md"
license = "MIT"
packages = [
  { "include" = "motion", from = "src" },
  { "include" = "todo_manager", from = "plugins" },
]

[tool.poetry.scripts]
todo = "todo_manager.cli:cli"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pydantic = "^2.6.1"
click = {version="^8.0", optional=true}

[tool.poetry.extras]
todo = [
  "click"
]

[tool.poetry.group.dev.dependencies]
pytest = "*"
ruff = "^0.2.2"
ruff-lsp = "^0.0.52"

[tool.ruff]
line-length = 79
indent-width = 4
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = 79

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
