[tool.poetry]
name = "python-motion"
version = "0.1.1"
description = ""
authors = ["Lemuel Boyce <lemuel@vokality.com>"]
readme = "README.md"
license = "MIT"
packages = [{ "include" = "motion", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.0"
pydantic = "^2.9.2"

[tool.poetry.group.dev.dependencies]
ruff = "*"
ruff-lsp = "*"
pytest = "*"

[tool.ruff]
line-length = 79
indent-width = 4
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = 79

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
